Time: 20 ms (66.59%), Space: 45.8 MB (50.64%) - LeetHub